styles-var-mixins

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
   <body>
     <div class="wrapper">
-      <header class="header--outdoor">
-        <div class="container">
+      <div class="container">
+        <header class="header--outdoor">
           <div class="header--logo">
             <!-- logo-outdoor svg -->
             <svg
@@ -65,11 +65,12 @@
               <!-- after items-in-cart-icon svg-->
             </button>
           </nav>
-        </div>
-      </header>
+        </header>
+      </div>
       <main class="main">
         <article class="article--outdoor-gear-store">
           <h1 class="visually-hidden">Outdoor gear company, outdoor store</h1>
+          <!-- outdoor-hero -->
           <section class="outdoor--hero">
             <figure class="outdoor--hero__image">
               <img
@@ -82,7 +83,7 @@
               </figcaption>
             </figure>
             <div class="outdoor--hero__description">
-              <h4 class="outdoor--hero__subtitle">OUTDOOR EXPLORATION</h4>
+              <h4 class="outdoor--hero__subtitle section-subtitle">OUTDOOR EXPLORATION</h4>
               <h2 class="outdoor--hero__title">
                 Gear for when it actually matters.
               </h2>
@@ -92,7 +93,7 @@
               </p>
             </div>
           </section>
-          <!-- / outdoor hero section -->
+          <!-- about-us section -->
           <section class="about-us">
             <div class="container">
               <figure class="about-us__img">
@@ -113,12 +114,12 @@
                   aliquam odio et faucibus. Nulla rhoncus feugiat eros quis
                   consectetur. Morbi neque ex, condimentum dapibus congue et.
                 </p>
-                <a class="about-us__read-more-link" href="#">Read more</a>
+                <a class="about-us__link" href="#">Read more</a>
                 <!-- todo add arrow like ::after -->
               </div>
             </div>
           </section>
-          <!-- / about-us section-->
+          <!-- our-products section-->
           <section class="our-products">
             <div class="container">
               <div class="our-products__decription">
@@ -216,11 +217,11 @@
               </ul>
             </div>
           </section>
-          <!-- / our-products section -->
+          <!-- store section -->
           <section class="store">
             <div class="container">
               <div class="store__description">
-                <h4 class="store__subtitle">Meet the family</h4>
+                <h4 class="store__subtitle section-subtitle">Meet the family</h4>
                 <h3 class="store__title">What we have in store for you.</h3>
                 <p class="store__txt">
                   Morbi neque ex, condimentum dapibus congue et, vulputate ut
@@ -330,11 +331,11 @@
               <a href="#" class="store__link">Show all categories</a>
             </div>
           </section>
-          <!-- / store section-->
         </article>
-        <!-- / article outdoor-gear-store -->
+        <!-- advertising  section-->
         <section class="advertising">
           <h2 class="visually-hidden">Our store has everything!</h2>
+          <!-- drone-view -->
           <section class="drone-view">
             <img
               src="./images/5drone-view-article/sea-dron-view-bg.jpg"
@@ -358,9 +359,10 @@
               </ul>
             </div>
           </section>
+          <!-- shop section -->
           <section class="shop">
             <div class="shop__description">
-              <h5 class="shop__subtitle">shop</h5>
+              <h5 class="shop__subtitle section-subtitle">shop</h5>
               <h3 class="shop__title">Check out our products.</h3>
               <p class="shop__txt">
                 Morbi neque ex, condimentum dapibus congue et, vulputate ut
@@ -372,10 +374,11 @@
           </section>
         </section>
         <!-- / advertising -->
+				<!-- buyers-guide -->
         <section class="buyers-guide">
           <div class="buyers-guide__description">
-            <h4 class="buyers-guide__subtitle">Buyer's guides</h4>
-            <h3 class="buyers-guide__title">Navigating our offering.</h3>
+            <h4 class="buyers-guide__subtitle section-subtitle">Buyer's guides</h4>
+            <h3 class="buyers-guide__title section-title">Navigating our offering.</h3>
             <p class="buyers-guide__txt">
               Morbi neque ex, condimentum dapibus congue et, vulputate ut
               ligula. Vestibulum sit amet urna turpis. Mauris euismod elit et
@@ -428,6 +431,7 @@
           </ul>
           <a href="#" class="buyers-guide__link">Show all buyer's guides</a>
         </section>
+				<!-- magazine -->
         <section class="magazine">
           <div class="container">
             <img
@@ -436,8 +440,8 @@
               class="magazine__img"
             />
             <div class="magazine__description">
-              <h4 class="magazine__subtitle">Some light reading</h4>
-              <h3 class="magazine__title">Subscribe to our magazine today.</h3>
+              <h4 class="magazine__subtitle section-subtitle">Some light reading</h4>
+              <h3 class="magazine__title section-title">Subscribe to our magazine today.</h3>
               <p class="magazine__txt">
                 We are an outdoor gear company focused on Lorem ipsum dolor sit
                 amet, consectetur adipiscing elit. Nullam scelerisque aliquam
