--- a/index.html
+++ b/index.html
@@ -59,11 +59,7 @@
             <button class="cart-menu__purchase-btn" type="submit">
               Buy template
             </button>
-            <button class="cart-menu__cart-btn" type="submit">
-              Buy
-              <!-- before cart-icon svg-->
-              <!-- after items-in-cart-icon svg-->
-            </button>
+            <button class="cart-menu__cart-btn" type="submit">Cart</button>
           </nav>
         </header>
       </div>
@@ -83,7 +79,9 @@
               </figcaption>
             </figure>
             <div class="outdoor--hero__description">
-              <h4 class="outdoor--hero__subtitle section-subtitle">OUTDOOR EXPLORATION</h4>
+              <h4 class="outdoor--hero__subtitle section-subtitle">
+                OUTDOOR EXPLORATION
+              </h4>
               <h2 class="outdoor--hero__title">
                 Gear for when it actually matters.
               </h2>
@@ -120,8 +118,8 @@
             </div>
           </section>
           <!-- our-products section-->
-          <section class="our-products">
-            <div class="container">
+          <div class="container">
+            <section class="our-products">
               <div class="our-products__decription">
                 <h4 class="our-products__subtitle section-subtitle">
                   Our promise
@@ -215,15 +213,19 @@
                   </p>
                 </li>
               </ul>
-            </div>
-          </section>
+            </section>
+          </div>
           <!-- store section -->
-          <section class="store">
-            <div class="container">
+          <div class="container">
+            <section class="store">
               <div class="store__description">
-                <h4 class="store__subtitle section-subtitle">Meet the family</h4>
-                <h3 class="store__title">What we have in store for you.</h3>
-                <p class="store__txt">
+                <h4 class="store__subtitle section-subtitle">
+                  Meet the family
+                </h4>
+                <h3 class="store__title section-title">
+                  What we have in store for you.
+                </h3>
+                <p class="store__txt section-txt">
                   Morbi neque ex, condimentum dapibus congue et, vulputate ut
                   ligula. Vestibulum sit amet urna turpis. Mauris euismod elit
                   et nisi ultrices, ut faucibus orci tincidunt.
@@ -329,8 +331,8 @@
                 </li>
               </ul>
               <a href="#" class="store__link">Show all categories</a>
-            </div>
-          </section>
+            </section>
+          </div>
         </article>
         <!-- advertising  section-->
         <section class="advertising">
@@ -374,11 +376,15 @@
           </section>
         </section>
         <!-- / advertising -->
-				<!-- buyers-guide -->
+        <!-- buyers-guide -->
         <section class="buyers-guide">
           <div class="buyers-guide__description">
-            <h4 class="buyers-guide__subtitle section-subtitle">Buyer's guides</h4>
-            <h3 class="buyers-guide__title section-title">Navigating our offering.</h3>
+            <h4 class="buyers-guide__subtitle section-subtitle">
+              Buyer's guides
+            </h4>
+            <h3 class="buyers-guide__title section-title">
+              Navigating our offering.
+            </h3>
             <p class="buyers-guide__txt">
               Morbi neque ex, condimentum dapibus congue et, vulputate ut
               ligula. Vestibulum sit amet urna turpis. Mauris euismod elit et
@@ -431,7 +437,7 @@
           </ul>
           <a href="#" class="buyers-guide__link">Show all buyer's guides</a>
         </section>
-				<!-- magazine -->
+        <!-- magazine -->
         <section class="magazine">
           <div class="container">
             <img
@@ -440,8 +446,12 @@
               class="magazine__img"
             />
             <div class="magazine__description">
-              <h4 class="magazine__subtitle section-subtitle">Some light reading</h4>
-              <h3 class="magazine__title section-title">Subscribe to our magazine today.</h3>
+              <h4 class="magazine__subtitle section-subtitle">
+                Some light reading
+              </h4>
+              <h3 class="magazine__title section-title">
+                Subscribe to our magazine today.
+              </h3>
               <p class="magazine__txt">
                 We are an outdoor gear company focused on Lorem ipsum dolor sit
                 amet, consectetur adipiscing elit. Nullam scelerisque aliquam
