--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <body>
     <div class="wrapper">
       <div class="container">
+        <!-- none -->
         <header class="header--outdoor">
           <div class="header--logo">
             <!-- logo-outdoor svg -->
@@ -59,11 +60,25 @@
             <button class="cart-menu__purchase-btn" type="submit">
               Buy template
             </button>
-            <button class="cart-menu__cart-btn" type="submit">Cart</button>
+            <button class="cart-menu__cart-btn" type="submit">
+              <svg class="none"
+                width="17"
+                height="17"
+                viewBox="0 0 17 17"
+                fill="white"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M2.60593 2H0V0H4.39407L4.84288 4H16V9.93845L3.76941 12.3694L2.60593 2ZM15.5 17C14.6716 17 14 16.3284 14 15.5C14 14.6716 14.6716 14 15.5 14C16.3284 14 17 14.6716 17 15.5C17 16.3284 16.3284 17 15.5 17ZM5.5 17C4.67157 17 4 16.3284 4 15.5C4 14.6716 4.67157 14 5.5 14C6.32843 14 7 14.6716 7 15.5C7 16.3284 6.32843 17 5.5 17Z"
+                />
+              </svg>
+              Cart
+            </button>
           </nav>
         </header>
       </div>
       <main class="main">
+        <!-- none -->
         <article class="article--outdoor-gear-store">
           <h1 class="visually-hidden">Outdoor gear company, outdoor store</h1>
           <!-- outdoor-hero -->
@@ -83,17 +98,18 @@
                 OUTDOOR EXPLORATION
               </h4>
               <h2 class="outdoor--hero__title">
-                Gear for when it actually matters.
+                Gear for when it <br />
+                actually matters.
               </h2>
               <p class="outdoor--hero__txt">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br />
                 Suspendisse varius enim in eros elementum tristique.
               </p>
             </div>
           </section>
           <!-- about-us section -->
-          <section class="about-us">
-            <div class="container">
+          <div class="container">
+            <section class="about-us">
               <figure class="about-us__img">
                 <img
                   src="./images/2about-us-section/about-us-main-image.jpg"
@@ -112,11 +128,23 @@
                   aliquam odio et faucibus. Nulla rhoncus feugiat eros quis
                   consectetur. Morbi neque ex, condimentum dapibus congue et.
                 </p>
-                <a class="about-us__link" href="#">Read more</a>
-                <!-- todo add arrow like ::after -->
+                <a class="about-us__link" href="#"
+                  >Read more
+                  <svg
+                    width="20"
+                    height="10"
+                    viewBox="0 0 20 10"
+                    fill="#575445"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M18.6798 3.77312L15.2029 0.341984C14.7257 -0.102793 13.9758 -0.102793 13.4986 0.278444C13.0213 0.723221 13.0213 1.42216 13.4304 1.86693L15.4075 3.83666H1.22714C0.545397 3.83666 0 4.34498 0 4.98037C0 5.61577 0.545397 6.12409 1.22714 6.12409H15.4756L13.4986 8.09381C13.0213 8.53859 13.0895 9.23752 13.5667 9.6823C13.7713 9.87292 14.1121 10 14.3848 10C14.7257 10 14.9984 9.87292 15.2711 9.6823L18.748 6.25116C19.3616 5.48869 19.3616 4.47206 18.6798 3.77312Z"
+                    />
+                  </svg>
+                </a>
               </div>
-            </div>
-          </section>
+            </section>
+          </div>
           <!-- our-products section-->
           <div class="container">
             <section class="our-products">
