--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
   <body>
     <div class="wrapper">
-      <div class="container">
-        <!-- none -->
+      <div class="none">
+        <!-- container-->
         <header class="header--outdoor">
           <div class="header--logo">
             <!-- logo-outdoor svg -->
@@ -80,11 +80,12 @@
       </div>
       <main class="main">
         <!-- none-->
-        <article class="article--outdoor-gear-store">
+        <article class="none">
+          <!-- article--outdoor-gear-store -->
           <h1 class="visually-hidden">Outdoor gear company, outdoor store</h1>
           <!-- outdoor-hero -->
-          <section class="outdoor--hero">
-            <!-- none -->
+          <section class="none">
+            <!-- outdoor--hero -->
             <figure class="outdoor--hero__image">
               <img
                 src="./images/1hero-section/hero-bg.jpg"
@@ -110,8 +111,8 @@
             </div>
           </section>
           <!-- about-us section -->
-          <div class="container">
-            <!-- none -->
+          <div class="none">
+            <!-- container -->
             <section class="about-us">
               <figure class="about-us__img">
                 <div class="about-us__img-tr">
@@ -181,8 +182,8 @@
             </section>
           </div>
           <!-- our-products section-->
-          <div class="our-products__section-wrapper">
-            <!-- none -->
+          <div class="none">
+            <!--  our-products__section-wrapper -->
             <!-- wrapper for background color  -->
             <div class="container">
               <!-- container for product cards list-->
@@ -529,8 +530,8 @@
           </div>
         </article>
         <!-- advertising  section-->
-        <section class="none">
-					<!-- advertising -->
+        <section class="advertising-n-shop">
+          <!-- none -->
           <h2 class="visually-hidden">Our store has everything!</h2>
           <!-- drone-view -->
           <section class="drone-view">
@@ -545,14 +546,83 @@
                 Drone view of our product design, Leah Stoff, getting ready to
                 catch a wave last weekend.
               </p>
-              <a href="#" class="drone-view__link">Read more</a>
+              <a href="#" class="drone-view__link"
+                >Read more
+                <svg
+                  width="20"
+                  height="11"
+                  viewBox="0 0 20 11"
+                  fill="white"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M18.6798 4.11687L15.2029 0.685734C14.7257 0.240957 13.9758 0.240957 13.4986 0.622194C13.0213 1.06697 13.0213 1.76591 13.4304 2.21068L15.4075 4.18041H1.22714C0.545397 4.18041 0 4.68873 0 5.32412C0 5.95952 0.545397 6.46784 1.22714 6.46784H15.4756L13.4986 8.43756C13.0213 8.88234 13.0895 9.58127 13.5667 10.0261C13.7713 10.2167 14.1121 10.3438 14.3848 10.3438C14.7257 10.3438 14.9984 10.2167 15.2711 10.0261L18.748 6.59491C19.3616 5.83244 19.3616 4.81581 18.6798 4.11687Z"
+                  />
+                </svg>
+              </a>
             </div>
             <div class="drone-view__advertising advertising">
               <ul class="advertising__list">
-                <li class="advertising__item">First Aid Kit Banger Bottle</li>
-                <li class="advertising__item">Brian Schultz</li>
-                <li class="advertising__item">Leah Stoff</li>
-                <li class="advertising__item">Catalina, California</li>
+                <li class="advertising__item">
+                  <svg
+                    width="16"
+                    height="14"
+                    viewBox="0 0 16 14"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M13.587 10.4426C13.9434 10.4426 14.2656 10.1641 14.2656 9.75336C14.2656 9.34958 13.9434 9.07111 13.587 9.07111H5.79949C5.51157 9.07111 5.32648 8.86226 5.28535 8.54898L5.17566 7.83889H13.6624C14.7455 7.83889 15.3213 7.17752 15.479 6.07757L15.9726 2.71507C15.9863 2.6176 16 2.49925 16 2.41571C16 1.9632 15.7052 1.64993 15.1637 1.64993H4.30506L4.20908 0.974639C4.11997 0.3272 3.84576 0 3.03685 0H0.733505C0.335904 0 0 0.341124 0 0.751865C0 1.15564 0.335904 1.49677 0.733505 1.49677H2.76949L3.80463 8.69518C3.9623 9.7812 4.53813 10.4426 5.62125 10.4426H13.587ZM6.19023 14C6.88261 14 7.43788 13.4361 7.43788 12.733C7.43788 12.0298 6.88261 11.4659 6.19023 11.4659C5.49786 11.4659 4.94259 12.0298 4.94259 12.733C4.94259 13.4361 5.49786 14 6.19023 14ZM12.4764 14C13.1688 14 13.7241 13.4361 13.7241 12.733C13.7241 12.0298 13.1688 11.4659 12.4764 11.4659C11.7841 11.4659 11.2219 12.0298 11.2219 12.733C11.2219 13.4361 11.7841 14 12.4764 14Z"
+                      fill="white"
+                    />
+                  </svg>
+                  First Aid Kit Banger Bottle
+                </li>
+                <li class="advertising__item">
+                  <svg
+                    width="16"
+                    height="14"
+                    viewBox="0 0 16 14"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M13.822 13.3332C15.2461 13.3332 16 12.5793 16 11.156V4.32547C16 2.90218 15.2461 2.14179 13.822 2.14179H12.1788C11.6826 2.14179 11.5087 2.0573 11.1865 1.72585L10.6774 1.19293C10.3359 0.835479 9.98792 0.666504 9.33709 0.666504H6.63713C5.98631 0.666504 5.63834 0.835479 5.29682 1.19293L4.78776 1.72585C4.46557 2.0573 4.29158 2.14179 3.78896 2.14179H2.18445C0.760371 2.14179 0 2.90218 0 4.32547V11.156C0 12.5793 0.760371 13.3332 2.18445 13.3332H13.822ZM8.00322 11.221C6.08941 11.221 4.54934 9.6742 4.54934 7.73098C4.54934 5.79426 6.08941 4.24099 8.00322 4.24099C9.91704 4.24099 11.4507 5.79426 11.4507 7.73098C11.4507 9.6742 9.91704 11.221 8.00322 11.221ZM12.7394 6.2297C12.2561 6.2297 11.8566 5.83975 11.8566 5.34583C11.8566 4.8714 12.2626 4.46195 12.7394 4.46195C13.2098 4.46195 13.6158 4.8714 13.6158 5.34583C13.6158 5.83326 13.2163 6.2232 12.7394 6.2297ZM8.00322 9.92766C9.20822 9.92766 10.1748 8.9528 10.1748 7.73098C10.1748 6.51566 9.20822 5.5343 8.00322 5.5343C6.79823 5.5343 5.83166 6.51566 5.83166 7.73098C5.83166 8.9528 6.80467 9.92766 8.00322 9.92766Z"
+                      fill="white"
+                    />
+                  </svg>
+                  Brian Schultz
+                </li>
+                <li class="advertising__item">
+                  <svg
+                    width="16"
+                    height="16"
+                    viewBox="0 0 16 16"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M8.00429 7.77521C9.91658 7.77521 11.5087 6.04738 11.5087 3.83471C11.5087 1.67493 9.90792 0 8.00429 0C6.10065 0 4.48255 1.70138 4.49117 3.85234C4.49117 6.04738 6.09199 7.77521 8.00429 7.77521ZM13.7239 16C14.7276 16 15.3333 15.5063 15.3333 14.6953C15.3333 12.4298 12.4865 9.32672 7.99563 9.32672C3.51343 9.32672 0.666626 12.4298 0.666626 14.6953C0.666626 15.5063 1.27233 16 2.27607 16H13.7239Z"
+                      fill="white"
+                    />
+                  </svg>
+                  Leah Stoff
+                </li>
+                <li class="advertising__item">
+                  <svg
+                    width="16"
+                    height="16"
+                    viewBox="0 0 16 16"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M9.84468 15.0731L15.7901 2.12038C16.4948 0.592709 15.3203 -0.471786 13.8299 0.210791L0.861805 6.19959C-0.482791 6.81716 -0.199292 8.72675 1.3316 8.73487L7.14739 8.75113C7.24459 8.75113 7.26079 8.75925 7.26079 8.86489L7.27699 14.6749C7.27699 16.1863 9.18048 16.5195 9.84468 15.0731Z"
+                      fill="white"
+                    />
+                  </svg>
+                  Catalina, California
+                </li>
               </ul>
             </div>
           </section>
@@ -573,7 +643,7 @@
         <!-- / advertising -->
         <!-- buyers-guide -->
         <section class="none">
-					<!-- buyers-guide -->
+          <!-- buyers-guide -->
           <div class="buyers-guide__description">
             <h4 class="buyers-guide__subtitle section-subtitle">
               Buyer's guides
@@ -635,7 +705,7 @@
         </section>
         <!-- magazine -->
         <section class="none">
-					<!-- magazine -->
+          <!-- magazine -->
           <div class="container">
             <img
               src="./images/8magazine-section/magazine.jpg"
