drone view section

--- a/index.html
+++ b/index.html
@@ -576,7 +576,7 @@
                       fill="white"
                     />
                   </svg>
-                  First Aid Kit Banger Bottle
+                  <span>First Aid Kit Banger Bottle</span>
                 </li>
                 <li class="advertising__item">
                   <svg
@@ -591,7 +591,7 @@
                       fill="white"
                     />
                   </svg>
-                  Brian Schultz
+                  <span>Brian Schultz</span>
                 </li>
                 <li class="advertising__item">
                   <svg
@@ -606,7 +606,7 @@
                       fill="white"
                     />
                   </svg>
-                  Leah Stoff
+                  <span>Leah Stoff</span>
                 </li>
                 <li class="advertising__item">
                   <svg
@@ -621,7 +621,7 @@
                       fill="white"
                     />
                   </svg>
-                  Catalina, California
+                  <span>Catalina, California</span>
                 </li>
               </ul>
             </div>
