--- a/index.html
+++ b/index.html
@@ -628,16 +628,18 @@
           </section>
           <!-- shop section -->
           <section class="shop">
-            <div class="shop__description">
-              <h5 class="shop__subtitle section-subtitle">shop</h5>
-              <h3 class="shop__title">Check out our products.</h3>
-              <p class="shop__txt">
-                Morbi neque ex, condimentum dapibus congue et, vulputate ut
-                ligula. Vestibulum sit amet urna turpis. Mauris euismod elit et
-                nisi ultrices, ut faucibus orci tincidunt.
-              </p>
+            <div class="container">
+              <div class="shop__description">
+                <h5 class="shop__subtitle section-subtitle">shop</h5>
+                <h3 class="shop__title">Check out our products.</h3>
+                <p class="shop__txt">
+                  Morbi neque ex, condimentum dapibus congue et, vulputate ut
+                  ligula. Vestibulum sit amet urna turpis. Mauris euismod elit
+                  et nisi ultrices, ut faucibus orci tincidunt.
+                </p>
+                <a href="#" class="shop__link">Visit shop</a>
+              </div>
             </div>
-            <a href="#" class="shop__link">Visit shop</a>
           </section>
         </section>
         <!-- / advertising -->
