--- a/index.html
+++ b/index.html
@@ -663,11 +663,12 @@
             </div>
             <ul class="buyers-guide__offer offer">
               <li class="offer__item">
-                <img
-                  src="./images/7buyers-guide-section/climbing-img.jpg"
-                  alt="climbing"
-                  class="offer__img"
-                />
+                <div class="offer__img">
+                  <img
+                    src="./images/7buyers-guide-section/climbing-img.jpg"
+                    alt="climbing"
+                  />
+                </div>
                 <p class="offer__txt">
                   3 climbing accessories for the climber that has everything
                 </p>
@@ -685,11 +686,12 @@
                 </div>
               </li>
               <li class="offer__item">
-                <img
-                  src="./images/7buyers-guide-section/biking-img.jpg"
-                  alt="climbing"
-                  class="offer__img"
-                />
+                <div class="offer__img">
+                  <img
+                    src="./images/7buyers-guide-section/biking-img.jpg"
+                    alt="climbing"
+                  />
+                </div>
                 <p class="offer__txt">Biking accessories for the beaten path</p>
                 <div class="offer__target">
                   <img
